# DAGRI-Dataset-FormalRun

./: README.md
TableIE/baseline/: README.md  baseline.py  pyproject.toml
TableIE/baseline/src/dagri_subtask1_baseline/: __init__.py
TableIE/baseline/src/dagri_subtask1_baseline/management_type/: __init__.py  (+1 more)
TableIE/baseline/tests/baseline/: test_baseline.py
TableIE/baseline/tests/sdk/: test_diagnose_cli.py  test_submission_dataset_writer_service.py
TableIE/evaluate/: .gitignore  README.md  pyproject.toml
TableIE/evaluate/docs/: BASELINE_PIPELINE.md  DATA_SCHEMA.md  SUBMISSION.md
TableIE/evaluate/src/dagri_subtask1_eval/: __init__.py
TableIE/evaluate/src/dagri_subtask1_sdk/: __init__.py
TableIE/evaluate/tests/: data_invalid_submission.jsonl  test_balance_evaluation_service.py  test_capital_equipment_evaluation_service.py  test_eval_dataset_reader.py  test_evaluate_usecase.py  test_field_whitelist_evaluation_services.py  test_growing_area_evaluation_service.py  test_logging_config.py  test_main_cli.py  test_main_container.py  test_management_indicator_alignment_service.py  test_management_indicator_balance_evaluation_service.py  test_management_type_alignment_service.py  test_premise_evaluation_service.py  test_submission_dataset.py  test_submission_dataset_reader.py  test_work_schedule_evaluation_service.py  test_work_technology_evaluation_service.py
TableIE/evaluate/tests/sdk/: test_agricultural_technical_pdf_document_discovery_service.py  test_create_submission_file_usecase.py  test_diagnose_submission_usecase.py  test_submission_diagnose_service.py
(+217 files in other folders)
