[project]
name = "dagri-subtask1-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tmorioka", email = "miki16g@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.3",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "ruff>=0.15.11",
]
gpt = [
    "openai>=2.30.0",
]
