[project]
name = "dagri-subtask1-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tmorioka", email = "miki16g@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
